@@ -428,6 +428,11 @@ class User < ActiveRecord::Base
     self.sb_last_seen_at = Time.now.utc
   end
   
+  def deliver_password_reset_instructions!
+    reset_perishable_token!
+    UserNotifier.deliver_password_reset_instructions(self)
+  end  
+  
   ## End Instance Methods
   
 
