@@ -6,7 +6,7 @@
     -box do
       %h3=:forgot_your_password.l
 
-      - form_tag forgot_password_url, :class => 'MainForm' do
+      - form_tag password_resets_path, :class => 'MainForm' do
         %label{"for"=>"email"}=:enter_your_email_address.l+":"
         = text_field_tag 'email', nil, :size => 35
         %p
