@@ -1,0 +1,10 @@
+Hi there!
+
+A request to reset your <%= AppConfig.community_name %> password has been made. If you did not make this request, simply ignore this email. If you did make this request, visit the URL below.
+
+<%= @edit_password_reset_url %>
+
+If you have any questions, please contact <%= AppConfig.community_name %> support at <%= AppConfig.support_email %>.
+
+Thanks,
+The <%= AppConfig.community_name %> team
