@@ -1,7 +1,8 @@
 Bonjour !
 
-Nous avons réinitialisé votre mot de passe <%= AppConfig.community_name %>.
-Votre nouveau mot de passe est : <%= @user.password %>. 
+Pour réinitialiser votre mot de passe <%= AppConfig.community_name %>, visite:
+
+<%= @edit_password_reset_url %>
 
 Pour tout information complémentaire, merci de contacter le support <%= AppConfig.community_name %> à l'adresse <%= AppConfig.support_email %>.
 
