@@ -1,7 +1,0 @@
-Hi there!
-We've reset your <%= AppConfig.community_name %> password. Your new password is: <%= @user.password %>. 
-
-If you have any questions, please contact <%= AppConfig.community_name %> support at <%= AppConfig.support_email %>.
-
-Thanks,
-The <%= AppConfig.community_name %> team
