@@ -2,6 +2,7 @@
 
 =1.1.0
 * fixed time_ago formatting problem on user/index
+* user Authlogic's perishable token for doing password resets (instead of sending them a password)
 
 
 = 1.0.4.2
